@@ -1,3 +1,4 @@
 assets/users/*
+accounts/*
 !assets/users/delete.txt
 back.txt
