@@ -22,21 +22,6 @@ body {
     left: 0;
 }
 
-.userinformation {
-    z-index: 10;
-    pointer-events: none;
-    background: url(/assets/jpg/Jeff_Killer.jpg);
-    background-size: cover;
-    position: fixed;
-    opacity: 0;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    transition: opacity 20s ease;
-    box-shadow: inset 0 0 5000px #000;
-}
-
 /* width */
 ::-webkit-scrollbar {
     display: none;
@@ -64,15 +49,6 @@ body {
     top: 0;
     left: 0;
     z-index: 2;
-}
-
-#myVideo {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-    z-index: -1;
 }
 
 .modal-content {
@@ -150,19 +126,6 @@ body {
     border: 1px solid #0055ff;
     width: 35%;
     transition: background 0.3s ease, color 0.3s ease;
-}
-
-#join {
-    background: #199101;
-    color: var(--background-color-2);
-    border: 1px solid #199101;
-    width: 55%;
-}
-
-#join:hover, #log-in:hover {
-    background: var(--text-color);
-    border: 1px solid var(--text-color);
-    color: var(--background-color-2);
 }
 
 .reveal {
@@ -494,42 +457,6 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-/*user-info*/
-.user-info {
-    position: absolute;
-    margin-top: 7em;
-    width: 100%;
-    left: 0;
-    text-align: center;
-}
-
-.userdis {
-    display: inline-block;
-    width: 74%;
-}
-
-.accounts-table td{
-    width: auto !important;
-}
-
-.user-info h3 {
-    font-family: 'Roboto', sans-serif;
-    color: var(--text-color);
-    text-align: left;
-}
-
-.user-info h2 {
-    font-family: 'Roboto', sans-serif;
-    color: var(--text-color);
-    text-align: left;
-}
-
-.user-info table {
-    background: transparent;
-    border-spacing: 0px;
-    border-collapse: separate;
-}
-
 tr:first-child td:first-child { 
     border-top-left-radius: 8px;
 }
@@ -542,43 +469,7 @@ tr:last-child td:first-child {
 tr:last-child td:last-child { 
     border-bottom-right-radius: 8px; 
 }
-
-.user-info tr {
-    background: transparent;
-}
-
-.user-info th {
-    font-family: 'Roboto', sans-serif;
-    color: var(--text-color);
-    text-align: left;
-    padding: 10px;
-}
-
-.user-info td {
-    font-family: 'Roboto', sans-serif;
-    color: var(--text-color);
-    text-align: left;
-    padding: 10px;
-    height: 2em;
-    width: 10em;
-}
 /*d1d1d1*/
-
-.positive p {
-    color: white;
-    display: inline;
-    background: green;
-    padding: 2px 5px;
-    border-radius: 8px;
-}
-
-.negative p {
-    color: white;
-    display: inline;
-    background: red;
-    padding: 2px 5px;
-    border-radius: 8px;
-}
 
 .after-content {
     display: block;
@@ -621,9 +512,9 @@ tr:last-child td:last-child {
     position: fixed;
     width: 100%;
     height: 100vh;
-    background: #00000080;
+    background: #202020;
     backdrop-filter: blur(10px);
-    z-index: 9;
+    z-index: 99999999;
     top: 0;
     left: 0;
 }
@@ -642,11 +533,19 @@ tr:last-child td:last-child {
     text-align: center;
     margin: 10px auto auto auto;
     font-family: 'Roboto', sans-serif;
-    color: var(--background-color-2);
+    color: var(--background-color-0);
     background: none;
     border: none;
     font-size: 16px;
-    cursor: pointer
+    cursor: pointer;
+    border-radius: 5px;
+    padding: 2px 5px;
+    transition: 0.3s ease;
+}
+
+.expire button:hover {
+    color: var(--background-color-2);
+    background: none;
 }
 
 .update-anchor {
@@ -666,6 +565,10 @@ tr:last-child td:last-child {
     transition: color ease 0.3s, background ease 0.3s, border-radius 0.2s ease;
     border: transparent solid 1px;
     font-size: 16px;
+    margin: 0px 2px;
+    border: 1px solid rgba(0,0,0,0.15);
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px -2px rgba(0,0,0,0.15);
 }
 
 .pagi:hover {
@@ -674,6 +577,12 @@ tr:last-child td:last-child {
 
 .pagetoomuch {
     user-select: none;
+    background-color: transparent !important;
+    margin: 0px 10px;
+}
+
+.pagetoomuch:hover {
+    color: #202020 !important;
 }
 
 .current {
@@ -694,7 +603,7 @@ tr:last-child td:last-child {
     border-spacing: 0;
 }
 
-.pagination a {
+/*.pagination a {
     border-top: 1px solid rgba(0,0,0,0.15);
     border-bottom: 1px solid rgba(0,0,0,0.15);
 }
@@ -709,7 +618,7 @@ tr:last-child td:last-child {
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
     border-right: 1px solid rgba(0,0,0,0.15);
-}
+}*/
 
 .pagination a:first-child {
     margin: 10px;
@@ -721,22 +630,6 @@ tr:last-child td:last-child {
     margin: 10px;
     border-radius: 5px;
     border: 1px solid rgba(0,0,0,0.15);
-}
-
-.showall {
-    display: block;
-    font-family: 'Roboto', sans-serif;
-    text-align: left !important;
-    color: var(--text-color);
-    margin-top: 20px;
-    padding: 0.5em;
-    margin: 10px 0px;
-    border-radius: 10px;
-    transition: 0.3s ease background, color 0.3s ease;
-}
-
-.showall:hover {
-    color: var(--background-color-0);
 }
 
 @media print {    
@@ -757,66 +650,12 @@ tr:last-child td:last-child {
     display: block;
 }*/
 
-.transfertable {
-    border: 1px solid transparent !important;
-}
-
 .Card input,select {
     width: 100%;
     border: 1px solid var(--background-color-0);
     background: var(--background-color-0);
     padding: 10px;
     border-radius: 10px;
-}
-
-.transfertable input {
-    width: 90%;
-}
-
-.transfertable button {
-    border: 1px solid #402285;
-    background: #402285;
-    color: var(--background-color-0);
-    cursor: pointer;
-    padding: 8px 10px;
-    border-radius: 10px;
-    transition: border 0.3s ease, background 0.3s ease, color 0.3s ease;
-}
-
-.transfertable button:hover {
-    border: 1px solid var(--background-color-0);
-    background: var(--background-color-0);
-    color: var(--text-color);
-}
-
-.transfertable th {
-    border-bottom: 1px solid var(--background-color-0) !important;
-}
-
-.transfertable td {
-    width: 2em;
-    padding-left: 0;
-}
-
-.transfertable td a {
-    color: black;
-    cursor: pointer;
-    text-decoration: underline;
-}
-
-.transfertable td div {
-    color: var(--background-color-0);
-    display: block;
-    text-align: left;
-}
-
-.transfertable tr {
-    background: transparent;
-}
-
-.transfertable th {
-    text-align: left !important;
-    padding-left: 0;
 }
 
 .ins-funds {
@@ -841,89 +680,6 @@ tr:last-child td:last-child {
 
 select {
     cursor: pointer;
-}
-
-.acc-table {
-    display: inline-block;
-    margin-left: 15px;
-    vertical-align: middle;
-}
-
-.acc-table tr {
-    display: block;
-}
-
-.acc-table td {
-    font-size: 18px;
-    font-family: 'Roboto', sans-serif;
-    width: 150px;
-    text-align: left;
-}
-
-.info-nav {
-    position: fixed;
-    background: var(--background-color-0);
-    width: 100%;
-    top: 0;
-    left: 0;
-    padding: 15px 10px;
-    box-shadow: 0px 0px 33px -2px rgba(0,0,0,0.17);
-    z-index: 999999;
-}
-
-.info-nav p {
-    display: inline;
-    text-decoration: none;
-    color: var(--text-color);
-    font-family: 'Roboto', sans-serif;
-    vertical-align: middle;
-    margin: 0 20px 0 20px;
-}
-
-.info-nav a {
-    text-decoration: none;
-    color: var(--text-color);
-    font-family: 'Roboto', sans-serif;
-}
-
-.info-nav a:hover {
-    text-decoration: none;
-    color: #999;
-    font-family: 'Roboto', sans-serif;
-}
-
-.info-nav table {
-    width: 400px;
-    vertical-align: middle;
-}
-
-.acc-table th {
-    font-size: 14px !important;
-    font-family: 'Roboto', sans-serif;
-    width: 150px;
-    text-align: left;
-    font-weight: 100;
-    color: #999;
-}
-
-.username-name {
-    margin-top: 30px;
-    float: right;
-    margin-right: 35px;
-    text-decoration: none;
-    color: var(--text-color);
-    transition: color 0.3s ease;
-    font-family: 'Dancing Script', cursive;
-}
-
-.username-name:hover {
-    color: #999;
-}
-
-.acc-table .currency {
-    font-size: 12px;
-    text-transform: uppercase;
-    margin-left: 3px;
 }
 
 .vertical-nav {
@@ -1409,6 +1165,10 @@ input::-webkit-inner-spin-button {
 
 .error {
     color: firebrick;
+}
+
+.success {
+    color: forestgreen;
 }
 
 .downloadLink {
