@@ -14,11 +14,32 @@
         $downloadButton = false;
     }
 
+    if (isset($_POST['darkMode'])) {
+        $darkMode = true;
+    } else {
+        $darkMode = false;
+    }
+
+    $required = array('downloadButtonText', 'downloadFileLink', 'currency', 'currencySymbol', 'transferLimit', 'inactivityTimer');
+    
+    $error = false;
+    foreach($required as $field) {
+        if (empty($_POST[$field])) {
+            $error = true;
+        }
+    }
+
+    if ($error) {
+        header("Location: ../hidden/index.php?error=emptyfields");
+        exit();
+    }
+
     $downloadButtonText = $_POST['downloadButtonText'];
     $downloadFileLink = $_POST['downloadFileLink'];
     $currency = $_POST['currency'];
     $currencySymbol = $_POST['currencySymbol'];
     $transferLimit = $_POST['transferLimit'];
+    $inactivityTimer = $_POST['inactivityTimer'];
     
     $settings['overlay'] = $overlay;
     $settings['downloadButton'] = $downloadButton;
@@ -27,6 +48,8 @@
     $settings['currency'] = $currency;
     $settings['currencySymbol'] = $currencySymbol;
     $settings['transferLimit'] = (float)$transferLimit;
+    $settings['inactivityTimer'] = (int)$inactivityTimer;
+    $settings['darkMode'] = $darkMode;
         
     $json = json_encode($settings, JSON_PRETTY_PRINT);
     file_put_contents('../setup.json', $json);
