@@ -42,6 +42,8 @@ if (isset($_POST['transfer-submit'])) {
         }
     }
 }
+
+if (round($amount) !== 0.00) {
     if ($inaccount !== 'credits') {
         $sql = "UPDATE users SET ".$inaccount."=".$inaccount."+".$amount." WHERE    idUsers=".$idUser.";";
         mysqli_query($conn, $sql);
@@ -58,7 +60,7 @@ if (isset($_POST['transfer-submit'])) {
         $array = array_push($arr, $new);
         $fp = fopen('../assets/users/'.$_SESSION['userUid'].'.json', 'w');
         fwrite($fp, json_encode($arr, JSON_PRETTY_PRINT));
-        header("Location: ../transaction/index.php?transaction=success");
+        header("Location: ../dashboard/index.php?transaction=success");
         exit();
     } else if ($inaccount == 'credits') {
         $sql = "UPDATE users SET ".$inaccount."=".$inaccount."-".$amount." WHERE    idUsers=".$idUser.";";
@@ -76,7 +78,11 @@ if (isset($_POST['transfer-submit'])) {
         $array = array_push($arr, $new);
         $fp = fopen('../assets/users/'.$_SESSION['userUid'].'.json', 'w');
         fwrite($fp, json_encode($arr, JSON_PRETTY_PRINT));
-        header("Location: ../transaction/index.php?transaction=success");
+        header("Location: ../dashboard/index.php?transaction=success");
         exit();
     }
+} else {
+    header("Location: ../transaction/index.php?error=noamount");
+    exit();
+}
 ?>
